objects/iahelp__HelpReadingListEntry__c.object
<CustomObject>
    <description>A join object placing a Help Topic into a Help Reading List with a Reading Order</description>
    <fields>
        <fullName>iahelp__HelpReadingList__c</fullName>
        <inlineHelpText>The Help Reading List that contains this Help Topic as an Entry</inlineHelpText>
        <label>Help Reading List</label>
        <referenceTo>iahelp__HelpReadingList__c</referenceTo>
        <relationshipName>HelpReadingListTopics</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>iahelp__HelpTopic__c</fullName>
        <inlineHelpText>The Help Topic in this Help Reading List Entry</inlineHelpText>
        <label>Help Topic</label>
        <referenceTo>iahelp__HelpTopic__c</referenceTo>
        <relationshipName>HelpReadingListTopics</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>iahelp__ReadingListFeaturedUntil__c</fullName>
        <formula>iahelp__HelpReadingList__r.iahelp__FeaturedUntil__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reading List Featured Until</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>iahelp__ReadingOrder__c</fullName>
        <inlineHelpText>The Reading Order of this Help Reading List Entry - edited through the custom visual force Manage Reading List page</inlineHelpText>
        <label>Reading Order</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Help Reading List Entry</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Help Reading List Entry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Help Reading List Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>